tests/baselines/reference/exportsAndImportsWithUnderscores1(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
m1.ts(5,5): error TS1005: ',' expected.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== m1.ts (1 errors) ====
    var R: any
    export default R = {
        "__": 20,
        "_": 10
        "___": 30
        ~~~~~
!!! error TS1005: ',' expected.
    }
    
==== m2.ts (0 errors) ====
    import R from "./m1";
    const { __, _, ___ } = R;
    